<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.haytaesra.kadinisi.Fragment.Fragment_Add">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linerLayoutImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/black_gradient"
                    android:scaleType="centerCrop"
                    android:src="@color/crimson" />
                <TextView
                    android:id="@+id/greeting_textview"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_alignBottom="@+id/imageView2"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginBottom="11dp"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:fontFamily="MONOSPACE"
                    android:paddingLeft="10dp"
                    android:text="@string/ekle"
                    android:textColor="@color/white"
                    android:textSize="24dp" />


            </RelativeLayout>


            <Button
                android:id="@+id/btnUrunEkle"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="0.41"
                android:background="@drawable/darkgrey_border"
                android:drawableLeft="@mipmap/urun3"
                android:fontFamily="MONOSPACE"
                android:paddingTop="20dp"
                android:text="@string/urunekle"
                android:textAllCaps="false"
                android:textColor="@color/darkblue"
                android:textSize="22sp"
                />

            <Button
                android:id="@+id/btnEtkinlik"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.41"
                android:background="@drawable/darkgrey_border"
                android:drawableLeft="@mipmap/help"
                android:fontFamily="MONOSPACE"
                android:paddingTop="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/etkinlik"
                android:textAllCaps="false"
                android:textColor="@color/darkblue"
                android:textSize="22sp"
                android:layout_alignStart="@+id/btnUrunEkle"

                />

            <Button
                android:id="@+id/btnIlan"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.41"
                android:background="@drawable/darkgrey_border"
                android:drawableLeft="@mipmap/ilan"
                android:fontFamily="MONOSPACE"
                android:paddingTop="20dp"
                android:text="@string/ilan"
                android:textAllCaps="false"
                android:textColor="@color/darkblue"
                android:textSize="22sp"
                />
        </LinearLayout>

    </ScrollView>
</LinearLayout>