<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue">
    <ImageView
        android:layout_width="400dp"
        android:layout_height="310dp"
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:src="@mipmap/background"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="64dp" />

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:id="@+id/relativeLayout4"
        android:layout_marginBottom="64dp"
        android:layout_above="@+id/no_login_button"
        android:layout_centerHorizontal="true">
        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:id="@+id/facebook_button"
            android:background="@mipmap/facebook_button" />

        <Button
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@mipmap/twitter_button"
            android:id="@+id/twitter_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eposta_kaydol"
            android:id="@+id/signup_button"
            android:paddingLeft="10dp"
            android:drawableLeft="@mipmap/mail_icon"
            android:gravity="left|center_vertical"
            android:textAllCaps="false"
            android:drawablePadding="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@android:color/white"
            android:textSize="15dp"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterText"
        android:id="@+id/login_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAllCaps="false"
        android:background="@color/crimson"
        android:fontFamily="MONOSPACE"
        android:textColor="@color/white" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_without_save"
        android:id="@+id/no_login_button"
        android:textAllCaps="false"
        android:background="@color/half_transparent"
        android:fontFamily="MONOSPACE"
        android:textColor="@color/white"
        android:layout_above="@+id/login_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
