<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView"
        android:scaleType="centerCrop"
        android:src="@color/darkblue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dükkan Oluştur,Satış Yap"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:fontFamily="MONOSPACE"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/txtEmailKayıt"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/txtEmailKayıt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/white"
        android:id="@+id/relativeLayoutDukkan"
        android:layout_marginTop="5dp"></RelativeLayout>

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="350dp"
        android:id="@+id/relativeLayout3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_text"
            android:background="@color/little_transparent"
            android:textColorHint="#888888"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/isim_soyisim"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email_text"
            android:layout_marginTop="2dp"
            android:background="@color/little_transparent"
            android:ems="10"
            android:hint="@string/sifre"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColorHint="#888888" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password2_text"
            android:background="@color/little_transparent"
            android:textColorHint="#888888"
            android:hint="@string/sifre2"
            android:paddingLeft="20dp"
            android:layout_below="@+id/password_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp" />



        <EditText
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/name_text1"
            android:background="@color/little_transparent"
            android:textColorHint="#888888"
            android:hint="@string/eposta_adresi"
            android:paddingLeft="20dp"
            android:layout_below="@+id/password2_text"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="2dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtCinsiyet"
            android:background="@color/transparent"
            android:textColorHint="#888888"
            android:hint="Cinsiyet"
            android:paddingLeft="20dp"
            android:layout_below="@+id/name_text1"
            android:layout_alignRight="@+id/showDate2"
            android:layout_alignEnd="@+id/showDate2"
            android:layout_marginTop="2dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroupCinsiyet"
            android:layout_below="@+id/name_text1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">
            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kadın"
                android:layout_alignBaseline="@+id/txtCinsiyet"
                android:layout_alignBottom="@+id/txtCinsiyet"
                android:layout_toLeftOf="@+id/radioButton2"
                android:layout_toStartOf="@+id/radioButton2" />
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Erkek"
                android:layout_alignBaseline="@+id/radioButton"
                android:layout_alignBottom="@+id/radioButton"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RadioGroup>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/showDate"
            android:background="@color/transparent"
            android:textColorHint="#888888"
            android:hint="Doğum Tarihi Seç"
            android:paddingLeft="20dp"
            android:layout_below="@+id/txtCinsiyet"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showDate2"
            android:layout_alignBaseline="@+id/showDate"
            android:layout_alignBottom="@+id/showDate"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="11dp"
            android:layout_marginEnd="11dp"
            />





    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/kaydol"
        android:textSize="15dp"
        android:textAllCaps="false"
        android:id="@+id/login_button"
        android:background="@color/crimson"
        android:textColor="@color/white"
        android:layout_below="@+id/relativeLayout3"
        android:layout_alignLeft="@+id/relativeLayout3"
        android:layout_alignStart="@+id/relativeLayout3"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/relativeLayout3"
        android:layout_alignEnd="@+id/relativeLayout3" />




</RelativeLayout>