<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageViewShopping"
        android:scaleType="centerCrop"
        android:src="@color/darkblue" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alışveriş Yap"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:fontFamily="MONOSPACE"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txtEmailKaydol"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/txtEmailKaydol"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@color/white"
        android:id="@+id/relativeLayout2"
        android:layout_marginTop="5dp"></RelativeLayout>

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="350dp"
        android:id="@+id/relativeLayoutShopping"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email_text"
            android:background="@color/little_transparent"
            android:textColorHint="#888888"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/isim_soyisim"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/password_text_shopping"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email_text"
            android:layout_marginTop="2dp"
            android:background="@color/little_transparent"
            android:ems="10"
            android:hint="@string/sifre"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textColorHint="#888888" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password2_text_shopping"
            android:background="@color/little_transparent"
            android:textColorHint="#888888"
            android:hint="@string/sifre2"
            android:paddingLeft="20dp"
            android:layout_below="@+id/password_text_shopping"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp" />



        <EditText
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/name_text_shopping"
            android:background="@color/little_transparent"
            android:textColorHint="#888888"
            android:hint="@string/eposta_adresi"
            android:paddingLeft="20dp"
            android:layout_below="@+id/password2_text_shopping"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="2dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtCinsiyetShopping"
            android:background="@color/transparent"
            android:textColorHint="#888888"
            android:hint="Cinsiyet"
            android:paddingLeft="20dp"
            android:layout_below="@+id/name_text_shopping"
            android:layout_alignRight="@+id/showDate2"
            android:layout_alignEnd="@+id/showDate2"
            android:layout_marginTop="2dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroupCinsiyet_shopping"
            android:layout_below="@+id/name_text_shopping"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <RadioButton
                android:id="@+id/radioButton_shopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/txtCinsiyetShopping"
                android:layout_alignBottom="@+id/txtCinsiyetShopping"
                android:layout_toLeftOf="@+id/radioButton2_shopping"
                android:layout_toStartOf="@+id/radioButton2_shopping"
                android:text="Kadın" />

            <RadioButton
            android:id="@+id/radioButton2_shopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Erkek"
            android:layout_alignBaseline="@+id/radioButton_shopping"
            android:layout_alignBottom="@+id/radioButton_shopping"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        </RadioGroup>

        <EditText
            android:id="@+id/showDate_shopping"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_alignEnd="@+id/showDate2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/showDate2"
            android:layout_below="@+id/txtCinsiyetShopping"
            android:layout_marginTop="2dp"
            android:autoText="false"
            android:background="@color/transparent"
            android:ems="10"
            android:hint="Doğum Tarihi Seç"
            android:inputType="date"
            android:paddingLeft="20dp"
            android:textColorHint="#888888" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/showDate2_shopping"
            android:layout_alignBaseline="@+id/showDate_shopping"
            android:layout_alignBottom="@+id/showDate_shopping"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="11dp"
            android:layout_marginEnd="11dp" />





    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/kaydol"
        android:textSize="15dp"
        android:textAllCaps="false"
        android:id="@+id/login_button"
        android:background="@color/crimson"
        android:textColor="@color/white"
        android:layout_below="@+id/relativeLayoutShopping"
        android:layout_alignLeft="@+id/relativeLayoutShopping"
        android:layout_alignStart="@+id/relativeLayoutShopping"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/relativeLayoutShopping"
        android:layout_alignEnd="@+id/relativeLayoutShopping" />
</RelativeLayout>